# G-Earth

./: .gitignore  .gitmodules  Extensions.md  G-Python-qtConsole.md  Home.md  LICENSE  README.es.md  README.md  README.pt-BR.md  Troubleshooting.md  Unity-versions.md  desktop.ini  jitpack.yml  macOs-Installation-guide.md  pom.xml  settings.gradle.kts
.github/: README.md  README.pt-BR.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: build.yml
Debug/: debug_info.bat
Extensions/AdminOnConnect/: pom.xml
Extensions/BlockReplacePackets/: pom.xml
Extensions/HappySpeech/: pom.xml
Extensions/SpeechColorizer/: pom.xml
G-Earth/: build.gradle.kts  pom.xml
G-Earth-Api/: pom.xml
G-Earth-UI/: pom.xml
G-Earth/assembly/: linux.xml  mac.xml  windows_32bit.xml  windows_64bit.xml
G-Mem/: Cargo.toml
G-Mem/G-Mem/: Process.cpp  Process.hpp  ctpl_stl.h  main.c  main.cpp  memory.c  memory.h  process.c  process.h
G-Mem/G-Mem.xcodeproj/: project.pbxproj
G-Mem/G-Mem.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
G-Mem/src/: main.rs
G-Wasm/: .gitignore  README.md  build.gradle.kts  pom.xml
G-WinMem/: G-WinMem.sln
G-WinMem/G-WinMem/: G-WinMem.cpp  G-WinMem.vcxproj  G-WinMem.vcxproj.filters  Process.cpp  Process.h  ctpl_stl.h  stdafx.cpp
docs/: README.md  README.pt-BR.md
docs/wiki/: G-Python-qtConsole.md  Troubleshooting.md  macOs-Installation-guide.md
src/g_earth/: Main.java
src/g_earth/extensions/: Extension.java  ExtensionForm.java  ExtensionInfo.java
src/main/: Cacher.java  Main.java  OSValidator.java
(+1253 files in other folders)
