[package]
name = "G-Mem"
version = "0.1.0"
authors = ["G-Earth contributors"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
netstat = "0.7.0"
read-process-memory = "0.1.2"
procfs = "0.6.0"

[profile.dev]
opt-level = 3